Add AI implementation
